--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-rtl": "^3.3.4",
     "core-js": "^3.8.3",
+    "pinia": "^3.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5"
