--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@primeuix/themes": "^1.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-rtl": "^3.3.4",
     "core-js": "^3.8.3",
     "pinia": "^3.0.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.2",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5"
